# empty-odom-publisher

./: Dockerfile  package.xml  setup.cfg  setup.py
dummy_odom/: dummyodom.py
install/: local_setup.sh  setup.sh
install/publisherodometry/lib/publisherodometry/: publisherodometry_node
install/publisherodometry/share/publisherodometry/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/publisherodometry/: setup.cfg  setup.py
src/publisherodometry/publisherodometry/: publisher_node.py
