<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummyodom</name>
  <version>0.0.0</version>
  <description>A node th</description>
  <maintainer email="todo@todo.com">todo</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <license>todo</license>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

