<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>publisherodometry</name>
  <version>0.0.0</version>
  <description>A node that reads messages from the "chatter" and prints them.</description>
  <maintainer email="tt@tt.com">tt</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <license>tt</license>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

